gramC.output
Estado 417conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: translation_unit $end

    1 identifier: IDENTIFIER

    2 constant: CONSTANT

    3 string_literal: STRING_LITERAL

    4 ptr_op: PTR_OP

    5 le_op: LE_OP

    6 ge_op: GE_OP

    7 eq_op: EQ_OP

    8 ne_op: NE_OP

    9 inc_op: INC_OP

   10 dec_op: DEC_OP

   11 left_op: LEFT_OP

   12 right_op: RIGHT_OP

   13 and_assign: AND_ASSIGN

   14 mul_assign: MUL_ASSIGN

   15 right_assign: RIGHT_ASSIGN

   16 div_assign: DIV_ASSIGN

   17 xor_assign: XOR_ASSIGN

   18 mod_assign: MOD_ASSIGN

   19 or_assign: OR_ASSIGN

   20 add_assign: ADD_ASSIGN

   21 sub_assign: SUB_ASSIGN

   22 left_assign: LEFT_ASSIGN

   23 sizeof: SIZEOF

   24 and_op: AND_OP

   25 or_op: OR_OP

   26 extern: EXTERN

   27 typedef: TYPEDEF

   28 register: REGISTER

   29 auto: AUTO

   30 static: STATIC

   31 struct_type: STRUCT_TYPE

   32 unsigned: UNSIGNED

   33 char: CHAR

   34 float: FLOAT

   35 short: SHORT

   36 void: VOID

   37 int: INT

   38 signed: SIGNED

   39 long: LONG

   40 double: DOUBLE

   41 struct: STRUCT

   42 union: UNION

   43 enum: ENUM

   44 const: CONST

   45 volatile: VOLATILE

   46 ellipsis: ELLIPSIS

   47 default: DEFAULT

   48 case: CASE

   49 switch: SWITCH

   50 if: IF

   51 else: ELSE

   52 while: WHILE

   53 do: DO

   54 for: FOR

   55 continue: CONTINUE

   56 break: BREAK

   57 goto: GOTO

   58 return: RETURN

   59 lparen: '('

   60 rparen: ')'

   61 lkey: '{'

   62 rkey: '}'

   63 lbracket: '['

   64 rbracket: ']'

   65 point: '.'

   66 comma: ','

   67 and_sign: '&'

   68 mul_sign: '*'

   69 div_sign: '/'

   70 plus_sign: '+'

   71 minus_sign: '-'

   72 less_sign: '<'

   73 great_sign: '>'

   74 tilde: '~'

   75 percent: '%'

   76 exclamation_sign: '!'

   77 caret: '^'

   78 vertical_bar: '|'

   79 question: '?'

   80 colon: ':'

   81 semicolon: ';'

   82 equal: '='

   83 translation_unit: external_declaration
   84                 | translation_unit external_declaration

   85 primary_expression: identifier
   86                   | constant
   87                   | string_literal
   88                   | lparen expression rparen

   89 postfix_expression: primary_expression
   90                   | postfix_expression lbracket expression rbracket
   91                   | postfix_expression lparen rparen
   92                   | postfix_expression lparen argument_expression_list rparen
   93                   | postfix_expression point identifier
   94                   | postfix_expression ptr_op identifier
   95                   | postfix_expression inc_op
   96                   | postfix_expression dec_op

   97 argument_expression_list: assignment_expression
   98                         | argument_expression_list comma assignment_expression

   99 unary_expression: postfix_expression
  100                 | inc_op unary_expression
  101                 | dec_op unary_expression
  102                 | unary_operator cast_expression
  103                 | sizeof unary_expression
  104                 | sizeof lparen type_name rparen

  105 unary_operator: and_sign
  106               | mul_sign
  107               | plus_sign
  108               | minus_sign
  109               | tilde
  110               | exclamation_sign

  111 cast_expression: unary_expression
  112                | lparen type_name rparen cast_expression

  113 multiplicative_expression: cast_expression
  114                          | multiplicative_expression mul_sign cast_expression
  115                          | multiplicative_expression div_sign cast_expression
  116                          | multiplicative_expression percent cast_expression

  117 additive_expression: multiplicative_expression
  118                    | additive_expression plus_sign multiplicative_expression
  119                    | additive_expression minus_sign multiplicative_expression

  120 shift_expression: additive_expression
  121                 | shift_expression left_op additive_expression
  122                 | shift_expression right_op additive_expression

  123 relational_expression: shift_expression
  124                      | relational_expression less_sign shift_expression
  125                      | relational_expression great_sign shift_expression
  126                      | relational_expression le_op shift_expression
  127                      | relational_expression ge_op shift_expression

  128 equality_expression: relational_expression
  129                    | equality_expression eq_op relational_expression
  130                    | equality_expression ne_op relational_expression

  131 and_expression: equality_expression
  132               | and_expression and_sign equality_expression

  133 exclusive_or_expression: and_expression
  134                        | exclusive_or_expression caret and_expression

  135 inclusive_or_expression: exclusive_or_expression
  136                        | inclusive_or_expression vertical_bar exclusive_or_expression

  137 logical_and_expression: inclusive_or_expression
  138                       | logical_and_expression and_op inclusive_or_expression

  139 logical_or_expression: logical_and_expression
  140                      | logical_or_expression or_op logical_and_expression

  141 conditional_expression: logical_or_expression
  142                       | logical_or_expression question expression colon conditional_expression

  143 assignment_expression: conditional_expression
  144                      | unary_expression assignment_operator assignment_expression

  145 assignment_operator: equal
  146                    | mul_assign
  147                    | div_assign
  148                    | mod_assign
  149                    | add_assign
  150                    | sub_assign
  151                    | left_assign
  152                    | right_assign
  153                    | and_assign
  154                    | xor_assign
  155                    | or_assign

  156 expression: assignment_expression
  157           | expression comma assignment_expression

  158 constant_expression: conditional_expression

  159 declaration: declaration_specifiers semicolon
  160            | declaration_specifiers init_declarator_list semicolon

  161 declaration_specifiers: storage_class_specifier
  162                       | storage_class_specifier declaration_specifiers
  163                       | type_specifier
  164                       | type_specifier declaration_specifiers
  165                       | type_qualifier
  166                       | type_qualifier declaration_specifiers

  167 init_declarator_list: init_declarator
  168                     | init_declarator_list comma init_declarator

  169 init_declarator: declarator
  170                | declarator equal initializer

  171 storage_class_specifier: typedef
  172                        | extern
  173                        | static
  174                        | auto
  175                        | register

  176 type_specifier: void
  177               | char
  178               | short
  179               | int
  180               | long
  181               | float
  182               | double
  183               | signed
  184               | unsigned
  185               | struct_or_union_specifier
  186               | enum_specifier
  187               | struct_type

  188 struct_or_union_specifier: struct_or_union identifier lkey struct_declaration_list rkey
  189                          | struct_or_union lkey struct_declaration_list rkey
  190                          | struct_or_union identifier

  191 struct_or_union: struct
  192                | union

  193 struct_declaration_list: struct_declaration
  194                        | struct_declaration_list struct_declaration

  195 struct_declaration: specifier_qualifier_list struct_declarator_list semicolon

  196 specifier_qualifier_list: type_specifier specifier_qualifier_list
  197                         | type_specifier
  198                         | type_qualifier specifier_qualifier_list
  199                         | type_qualifier

  200 struct_declarator_list: struct_declarator
  201                       | struct_declarator_list comma struct_declarator

  202 struct_declarator: declarator
  203                  | colon constant_expression
  204                  | declarator colon constant_expression

  205 enum_specifier: enum lkey enumerator_list rkey
  206               | enum identifier lkey enumerator_list rkey
  207               | enum identifier

  208 enumerator_list: enumerator
  209                | enumerator_list comma enumerator

  210 enumerator: identifier
  211           | identifier equal constant_expression

  212 type_qualifier: const
  213               | volatile

  214 declarator: pointer direct_declarator
  215           | direct_declarator

  216 direct_declarator: identifier
  217                  | '(' declarator rparen
  218                  | direct_declarator lbracket constant_expression rbracket
  219                  | direct_declarator lbracket rbracket
  220                  | direct_declarator lparen parameter_type_list rparen
  221                  | direct_declarator lparen identifier_list rparen
  222                  | direct_declarator lparen rparen

  223 pointer: mul_sign
  224        | mul_sign type_qualifier_list
  225        | mul_sign pointer
  226        | mul_sign type_qualifier_list pointer

  227 type_qualifier_list: type_qualifier
  228                    | type_qualifier_list type_qualifier

  229 parameter_type_list: parameter_list
  230                    | parameter_list semicolon ellipsis

  231 parameter_list: parameter_declaration
  232               | parameter_list comma parameter_declaration

  233 parameter_declaration: declaration_specifiers declarator
  234                      | declaration_specifiers abstract_declarator
  235                      | declaration_specifiers

  236 identifier_list: identifier
  237                | identifier_list comma identifier

  238 type_name: specifier_qualifier_list
  239          | specifier_qualifier_list abstract_declarator

  240 abstract_declarator: pointer
  241                    | direct_abstract_declarator
  242                    | pointer direct_abstract_declarator

  243 direct_abstract_declarator: '(' abstract_declarator rparen
  244                           | lbracket rbracket
  245                           | lbracket constant_expression rbracket
  246                           | direct_abstract_declarator lbracket rbracket
  247                           | direct_abstract_declarator lbracket constant_expression rbracket
  248                           | lparen rparen
  249                           | lparen parameter_type_list rparen
  250                           | direct_abstract_declarator lparen rparen
  251                           | direct_abstract_declarator lparen parameter_type_list rparen

  252 initializer: assignment_expression
  253            | lkey initializer_list rkey
  254            | lkey initializer_list comma rkey

  255 initializer_list: initializer
  256                 | initializer_list comma initializer

  257 statement: labeled_statement
  258          | compound_statement
  259          | expression_statement
  260          | selection_statement
  261          | iteration_statement
  262          | jump_statement

  263 labeled_statement: identifier colon statement
  264                  | case constant_expression colon statement
  265                  | default colon statement

  266 compound_statement: lkey rkey
  267                   | lkey statement_list rkey
  268                   | lkey declaration_list rkey
  269                   | lkey declaration_list statement_list rkey

  270 declaration_list: declaration
  271                 | declaration_list declaration

  272 statement_list: statement
  273               | statement_list statement

  274 expression_statement: semicolon
  275                     | expression semicolon

  276 selection_statement: if lparen expression rparen statement
  277                    | if lparen expression rparen statement else statement
  278                    | switch lparen expression rparen statement

  279 iteration_statement: while lparen expression rparen statement
  280                    | do statement while lparen expression rparen semicolon
  281                    | for lparen expression_statement expression_statement rparen statement
  282                    | for lparen expression_statement expression_statement expression rparen statement

  283 jump_statement: goto identifier semicolon
  284               | continue semicolon
  285               | break semicolon
  286               | return semicolon
  287               | return expression semicolon

  288 external_declaration: function_definition
  289                     | declaration

  290 function_definition: declaration_specifiers declarator declaration_list compound_statement
  291                    | declaration_specifiers declarator compound_statement
  292                    | declarator declaration_list compound_statement
  293                    | declarator compound_statement


Terminais, com as regras onde eles aparecem

$end (0) 0
'!' (33) 76
'%' (37) 75
'&' (38) 67
'(' (40) 59 217 243
')' (41) 60
'*' (42) 68
'+' (43) 70
',' (44) 66
'-' (45) 71
'.' (46) 65
'/' (47) 69
':' (58) 80
';' (59) 81
'<' (60) 72
'=' (61) 82
'>' (62) 73
'?' (63) 79
'[' (91) 63
']' (93) 64
'^' (94) 77
'{' (123) 61
'|' (124) 78
'}' (125) 62
'~' (126) 74
error (256)
IDENTIFIER (258) 1
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 23
PTR_OP (262) 4
INC_OP (263) 9
DEC_OP (264) 10
LEFT_OP (265) 11
RIGHT_OP (266) 12
LE_OP (267) 5
GE_OP (268) 6
EQ_OP (269) 7
NE_OP (270) 8
AND_OP (271) 24
OR_OP (272) 25
MUL_ASSIGN (273) 14
DIV_ASSIGN (274) 16
MOD_ASSIGN (275) 18
ADD_ASSIGN (276) 20
SUB_ASSIGN (277) 21
LEFT_ASSIGN (278) 22
RIGHT_ASSIGN (279) 15
AND_ASSIGN (280) 13
XOR_ASSIGN (281) 17
OR_ASSIGN (282) 19
TYPEDEF (283) 27
EXTERN (284) 26
STATIC (285) 30
AUTO (286) 29
REGISTER (287) 28
CHAR (288) 33
SHORT (289) 35
INT (290) 37
LONG (291) 39
SIGNED (292) 38
UNSIGNED (293) 32
FLOAT (294) 34
DOUBLE (295) 40
CONST (296) 44
VOLATILE (297) 45
VOID (298) 36
STRUCT (299) 41
UNION (300) 42
ENUM (301) 43
ELLIPSIS (302) 46
CASE (303) 48
DEFAULT (304) 47
IF (305) 50
ELSE (306) 51
SWITCH (307) 49
WHILE (308) 52
DO (309) 53
FOR (310) 54
GOTO (311) 57
CONTINUE (312) 55
BREAK (313) 56
RETURN (314) 58
STRUCT_TYPE (315) 31


Não-terminais com as regras onde eles aparecem

$accept (85)
    à esquerda: 0
identifier (86)
    à esquerda: 1, à direita: 85 93 94 188 190 206 207 210 211 216
    236 237 263 283
constant (87)
    à esquerda: 2, à direita: 86
string_literal (88)
    à esquerda: 3, à direita: 87
ptr_op (89)
    à esquerda: 4, à direita: 94
le_op (90)
    à esquerda: 5, à direita: 126
ge_op (91)
    à esquerda: 6, à direita: 127
eq_op (92)
    à esquerda: 7, à direita: 129
ne_op (93)
    à esquerda: 8, à direita: 130
inc_op (94)
    à esquerda: 9, à direita: 95 100
dec_op (95)
    à esquerda: 10, à direita: 96 101
left_op (96)
    à esquerda: 11, à direita: 121
right_op (97)
    à esquerda: 12, à direita: 122
and_assign (98)
    à esquerda: 13, à direita: 153
mul_assign (99)
    à esquerda: 14, à direita: 146
right_assign (100)
    à esquerda: 15, à direita: 152
div_assign (101)
    à esquerda: 16, à direita: 147
xor_assign (102)
    à esquerda: 17, à direita: 154
mod_assign (103)
    à esquerda: 18, à direita: 148
or_assign (104)
    à esquerda: 19, à direita: 155
add_assign (105)
    à esquerda: 20, à direita: 149
sub_assign (106)
    à esquerda: 21, à direita: 150
left_assign (107)
    à esquerda: 22, à direita: 151
sizeof (108)
    à esquerda: 23, à direita: 103 104
and_op (109)
    à esquerda: 24, à direita: 138
or_op (110)
    à esquerda: 25, à direita: 140
extern (111)
    à esquerda: 26, à direita: 172
typedef (112)
    à esquerda: 27, à direita: 171
register (113)
    à esquerda: 28, à direita: 175
auto (114)
    à esquerda: 29, à direita: 174
static (115)
    à esquerda: 30, à direita: 173
struct_type (116)
    à esquerda: 31, à direita: 187
unsigned (117)
    à esquerda: 32, à direita: 184
char (118)
    à esquerda: 33, à direita: 177
float (119)
    à esquerda: 34, à direita: 181
short (120)
    à esquerda: 35, à direita: 178
void (121)
    à esquerda: 36, à direita: 176
int (122)
    à esquerda: 37, à direita: 179
signed (123)
    à esquerda: 38, à direita: 183
long (124)
    à esquerda: 39, à direita: 180
double (125)
    à esquerda: 40, à direita: 182
struct (126)
    à esquerda: 41, à direita: 191
union (127)
    à esquerda: 42, à direita: 192
enum (128)
    à esquerda: 43, à direita: 205 206 207
const (129)
    à esquerda: 44, à direita: 212
volatile (130)
    à esquerda: 45, à direita: 213
ellipsis (131)
    à esquerda: 46, à direita: 230
default (132)
    à esquerda: 47, à direita: 265
case (133)
    à esquerda: 48, à direita: 264
switch (134)
    à esquerda: 49, à direita: 278
if (135)
    à esquerda: 50, à direita: 276 277
else (136)
    à esquerda: 51, à direita: 277
while (137)
    à esquerda: 52, à direita: 279 280
do (138)
    à esquerda: 53, à direita: 280
for (139)
    à esquerda: 54, à direita: 281 282
continue (140)
    à esquerda: 55, à direita: 284
break (141)
    à esquerda: 56, à direita: 285
goto (142)
    à esquerda: 57, à direita: 283
return (143)
    à esquerda: 58, à direita: 286 287
lparen (144)
    à esquerda: 59, à direita: 88 91 92 104 112 220 221 222 248 249
    250 251 276 277 278 279 280 281 282
rparen (145)
    à esquerda: 60, à direita: 88 91 92 104 112 217 220 221 222 243
    248 249 250 251 276 277 278 279 280 281 282
lkey (146)
    à esquerda: 61, à direita: 188 189 205 206 253 254 266 267 268
    269
rkey (147)
    à esquerda: 62, à direita: 188 189 205 206 253 254 266 267 268
    269
lbracket (148)
    à esquerda: 63, à direita: 90 218 219 244 245 246 247
rbracket (149)
    à esquerda: 64, à direita: 90 218 219 244 245 246 247
point (150)
    à esquerda: 65, à direita: 93
comma (151)
    à esquerda: 66, à direita: 98 157 168 201 209 232 237 254 256
and_sign (152)
    à esquerda: 67, à direita: 105 132
mul_sign (153)
    à esquerda: 68, à direita: 106 114 223 224 225 226
div_sign (154)
    à esquerda: 69, à direita: 115
plus_sign (155)
    à esquerda: 70, à direita: 107 118
minus_sign (156)
    à esquerda: 71, à direita: 108 119
less_sign (157)
    à esquerda: 72, à direita: 124
great_sign (158)
    à esquerda: 73, à direita: 125
tilde (159)
    à esquerda: 74, à direita: 109
percent (160)
    à esquerda: 75, à direita: 116
exclamation_sign (161)
    à esquerda: 76, à direita: 110
caret (162)
    à esquerda: 77, à direita: 134
vertical_bar (163)
    à esquerda: 78, à direita: 136
question (164)
    à esquerda: 79, à direita: 142
colon (165)
    à esquerda: 80, à direita: 142 203 204 263 264 265
semicolon (166)
    à esquerda: 81, à direita: 159 160 195 230 274 275 280 283 284
    285 286 287
equal (167)
    à esquerda: 82, à direita: 145 170 211
translation_unit (168)
    à esquerda: 83 84, à direita: 0 84
primary_expression (169)
    à esquerda: 85 86 87 88, à direita: 89
postfix_expression (170)
    à esquerda: 89 90 91 92 93 94 95 96, à direita: 90 91 92 93 94
    95 96 99
argument_expression_list (171)
    à esquerda: 97 98, à direita: 92 98
unary_expression (172)
    à esquerda: 99 100 101 102 103 104, à direita: 100 101 103 111
    144
unary_operator (173)
    à esquerda: 105 106 107 108 109 110, à direita: 102
cast_expression (174)
    à esquerda: 111 112, à direita: 102 112 113 114 115 116
multiplicative_expression (175)
    à esquerda: 113 114 115 116, à direita: 114 115 116 117 118 119
additive_expression (176)
    à esquerda: 117 118 119, à direita: 118 119 120 121 122
shift_expression (177)
    à esquerda: 120 121 122, à direita: 121 122 123 124 125 126 127
relational_expression (178)
    à esquerda: 123 124 125 126 127, à direita: 124 125 126 127 128
    129 130
equality_expression (179)
    à esquerda: 128 129 130, à direita: 129 130 131 132
and_expression (180)
    à esquerda: 131 132, à direita: 132 133 134
exclusive_or_expression (181)
    à esquerda: 133 134, à direita: 134 135 136
inclusive_or_expression (182)
    à esquerda: 135 136, à direita: 136 137 138
logical_and_expression (183)
    à esquerda: 137 138, à direita: 138 139 140
logical_or_expression (184)
    à esquerda: 139 140, à direita: 140 141 142
conditional_expression (185)
    à esquerda: 141 142, à direita: 142 143 158
assignment_expression (186)
    à esquerda: 143 144, à direita: 97 98 144 156 157 252
assignment_operator (187)
    à esquerda: 145 146 147 148 149 150 151 152 153 154 155, à direita:
    144
expression (188)
    à esquerda: 156 157, à direita: 88 90 142 157 275 276 277 278
    279 280 282 287
constant_expression (189)
    à esquerda: 158, à direita: 203 204 211 218 245 247 264
declaration (190)
    à esquerda: 159 160, à direita: 270 271 289
declaration_specifiers (191)
    à esquerda: 161 162 163 164 165 166, à direita: 159 160 162 164
    166 233 234 235 290 291
init_declarator_list (192)
    à esquerda: 167 168, à direita: 160 168
init_declarator (193)
    à esquerda: 169 170, à direita: 167 168
storage_class_specifier (194)
    à esquerda: 171 172 173 174 175, à direita: 161 162
type_specifier (195)
    à esquerda: 176 177 178 179 180 181 182 183 184 185 186 187, à direita:
    163 164 196 197
struct_or_union_specifier (196)
    à esquerda: 188 189 190, à direita: 185
struct_or_union (197)
    à esquerda: 191 192, à direita: 188 189 190
struct_declaration_list (198)
    à esquerda: 193 194, à direita: 188 189 194
struct_declaration (199)
    à esquerda: 195, à direita: 193 194
specifier_qualifier_list (200)
    à esquerda: 196 197 198 199, à direita: 195 196 198 238 239
struct_declarator_list (201)
    à esquerda: 200 201, à direita: 195 201
struct_declarator (202)
    à esquerda: 202 203 204, à direita: 200 201
enum_specifier (203)
    à esquerda: 205 206 207, à direita: 186
enumerator_list (204)
    à esquerda: 208 209, à direita: 205 206 209
enumerator (205)
    à esquerda: 210 211, à direita: 208 209
type_qualifier (206)
    à esquerda: 212 213, à direita: 165 166 198 199 227 228
declarator (207)
    à esquerda: 214 215, à direita: 169 170 202 204 217 233 290 291
    292 293
direct_declarator (208)
    à esquerda: 216 217 218 219 220 221 222, à direita: 214 215 218
    219 220 221 222
pointer (209)
    à esquerda: 223 224 225 226, à direita: 214 225 226 240 242
type_qualifier_list (210)
    à esquerda: 227 228, à direita: 224 226 228
parameter_type_list (211)
    à esquerda: 229 230, à direita: 220 249 251
parameter_list (212)
    à esquerda: 231 232, à direita: 229 230 232
parameter_declaration (213)
    à esquerda: 233 234 235, à direita: 231 232
identifier_list (214)
    à esquerda: 236 237, à direita: 221 237
type_name (215)
    à esquerda: 238 239, à direita: 104 112
abstract_declarator (216)
    à esquerda: 240 241 242, à direita: 234 239 243
direct_abstract_declarator (217)
    à esquerda: 243 244 245 246 247 248 249 250 251, à direita: 241
    242 246 247 250 251
initializer (218)
    à esquerda: 252 253 254, à direita: 170 255 256
initializer_list (219)
    à esquerda: 255 256, à direita: 253 254 256
statement (220)
    à esquerda: 257 258 259 260 261 262, à direita: 263 264 265 272
    273 276 277 278 279 280 281 282
labeled_statement (221)
    à esquerda: 263 264 265, à direita: 257
compound_statement (222)
    à esquerda: 266 267 268 269, à direita: 258 290 291 292 293
declaration_list (223)
    à esquerda: 270 271, à direita: 268 269 271 290 292
statement_list (224)
    à esquerda: 272 273, à direita: 267 269 273
expression_statement (225)
    à esquerda: 274 275, à direita: 259 281 282
selection_statement (226)
    à esquerda: 276 277 278, à direita: 260
iteration_statement (227)
    à esquerda: 279 280 281 282, à direita: 261
jump_statement (228)
    à esquerda: 283 284 285 286 287, à direita: 262
external_declaration (229)
    à esquerda: 288 289, à direita: 83 84
function_definition (230)
    à esquerda: 290 291 292 293, à direita: 288


estado 0

    0 $accept: . translation_unit $end

    IDENTIFIER   deslocar, e ir ao estado 1
    TYPEDEF      deslocar, e ir ao estado 2
    EXTERN       deslocar, e ir ao estado 3
    STATIC       deslocar, e ir ao estado 4
    AUTO         deslocar, e ir ao estado 5
    REGISTER     deslocar, e ir ao estado 6
    CHAR         deslocar, e ir ao estado 7
    SHORT        deslocar, e ir ao estado 8
    INT          deslocar, e ir ao estado 9
    LONG         deslocar, e ir ao estado 10
    SIGNED       deslocar, e ir ao estado 11
    UNSIGNED     deslocar, e ir ao estado 12
    FLOAT        deslocar, e ir ao estado 13
    DOUBLE       deslocar, e ir ao estado 14
    CONST        deslocar, e ir ao estado 15
    VOLATILE     deslocar, e ir ao estado 16
    VOID         deslocar, e ir ao estado 17
    STRUCT       deslocar, e ir ao estado 18
    UNION        deslocar, e ir ao estado 19
    ENUM         deslocar, e ir ao estado 20
    STRUCT_TYPE  deslocar, e ir ao estado 21
    '('          deslocar, e ir ao estado 22
    '*'          deslocar, e ir ao estado 23

    identifier                 ir ao estado 24
    extern                     ir ao estado 25
    typedef                    ir ao estado 26
    register                   ir ao estado 27
    auto                       ir ao estado 28
    static                     ir ao estado 29
    struct_type                ir ao estado 30
    unsigned                   ir ao estado 31
    char                       ir ao estado 32
    float                      ir ao estado 33
    short                      ir ao estado 34
    void                       ir ao estado 35
    int                        ir ao estado 36
    signed                     ir ao estado 37
    long                       ir ao estado 38
    double                     ir ao estado 39
    struct                     ir ao estado 40
    union                      ir ao estado 41
    enum                       ir ao estado 42
    const                      ir ao estado 43
    volatile                   ir ao estado 44
    mul_sign                   ir ao estado 45
    translation_unit           ir ao estado 46
    declaration                ir ao estado 47
    declaration_specifiers     ir ao estado 48
    storage_class_specifier    ir ao estado 49
    type_specifier             ir ao estado 50
    struct_or_union_specifier  ir ao estado 51
    struct_or_union            ir ao estado 52
    enum_specifier             ir ao estado 53
    type_qualifier             ir ao estado 54
    declarator                 ir ao estado 55
    direct_declarator          ir ao estado 56
    pointer                    ir ao estado 57
    external_declaration       ir ao estado 58
    function_definition        ir ao estado 59


estado 1

    1 identifier: IDENTIFIER .

    $padrão  reduzir usando a regra 1 (identifier)


estado 2

   27 typedef: TYPEDEF .

    $padrão  reduzir usando a regra 27 (typedef)


estado 3

   26 extern: EXTERN .

    $padrão  reduzir usando a regra 26 (extern)


estado 4

   30 static: STATIC .

    $padrão  reduzir usando a regra 30 (static)


estado 5

   29 auto: AUTO .

    $padrão  reduzir usando a regra 29 (auto)


estado 6

   28 register: REGISTER .

    $padrão  reduzir usando a regra 28 (register)


estado 7

   33 char: CHAR .

    $padrão  reduzir usando a regra 33 (char)


estado 8

   35 short: SHORT .

    $padrão  reduzir usando a regra 35 (short)


estado 9

   37 int: INT .

    $padrão  reduzir usando a regra 37 (int)


estado 10

   39 long: LONG .

    $padrão  reduzir usando a regra 39 (long)


estado 11

   38 signed: SIGNED .

    $padrão  reduzir usando a regra 38 (signed)


estado 12

   32 unsigned: UNSIGNED .

    $padrão  reduzir usando a regra 32 (unsigned)


estado 13

   34 float: FLOAT .

    $padrão  reduzir usando a regra 34 (float)


estado 14

   40 double: DOUBLE .

    $padrão  reduzir usando a regra 40 (double)


estado 15

   44 const: CONST .

    $padrão  reduzir usando a regra 44 (const)


estado 16

   45 volatile: VOLATILE .

    $padrão  reduzir usando a regra 45 (volatile)


estado 17

   36 void: VOID .

    $padrão  reduzir usando a regra 36 (void)


estado 18

   41 struct: STRUCT .

    $padrão  reduzir usando a regra 41 (struct)


estado 19

   42 union: UNION .

    $padrão  reduzir usando a regra 42 (union)


estado 20

   43 enum: ENUM .

    $padrão  reduzir usando a regra 43 (enum)


estado 21

   31 struct_type: STRUCT_TYPE .

    $padrão  reduzir usando a regra 31 (struct_type)


estado 22

  217 direct_declarator: '(' . declarator rparen

    IDENTIFIER  deslocar, e ir ao estado 1
    '('         deslocar, e ir ao estado 22
    '*'         deslocar, e ir ao estado 23

    identifier         ir ao estado 24
    mul_sign           ir ao estado 45
    declarator         ir ao estado 60
    direct_declarator  ir ao estado 56
    pointer            ir ao estado 57


estado 23

   68 mul_sign: '*' .

    $padrão  reduzir usando a regra 68 (mul_sign)


estado 24

  216 direct_declarator: identifier .

    $padrão  reduzir usando a regra 216 (direct_declarator)


estado 25

  172 storage_class_specifier: extern .

    $padrão  reduzir usando a regra 172 (storage_class_specifier)


estado 26

  171 storage_class_specifier: typedef .

    $padrão  reduzir usando a regra 171 (storage_class_specifier)


estado 27

  175 storage_class_specifier: register .

    $padrão  reduzir usando a regra 175 (storage_class_specifier)


estado 28

  174 storage_class_specifier: auto .

    $padrão  reduzir usando a regra 174 (storage_class_specifier)


estado 29

  173 storage_class_specifier: static .

    $padrão  reduzir usando a regra 173 (storage_class_specifier)


estado 30

  187 type_specifier: struct_type .

    $padrão  reduzir usando a regra 187 (type_specifier)


estado 31

  184 type_specifier: unsigned .

    $padrão  reduzir usando a regra 184 (type_specifier)


estado 32

  177 type_specifier: char .

    $padrão  reduzir usando a regra 177 (type_specifier)


estado 33

  181 type_specifier: float .

    $padrão  reduzir usando a regra 181 (type_specifier)


estado 34

  178 type_specifier: short .

    $padrão  reduzir usando a regra 178 (type_specifier)


estado 35

  176 type_specifier: void .

    $padrão  reduzir usando a regra 176 (type_specifier)


estado 36

  179 type_specifier: int .

    $padrão  reduzir usando a regra 179 (type_specifier)


estado 37

  183 type_specifier: signed .

    $padrão  reduzir usando a regra 183 (type_specifier)


estado 38

  180 type_specifier: long .

    $padrão  reduzir usando a regra 180 (type_specifier)


estado 39

  182 type_specifier: double .

    $padrão  reduzir usando a regra 182 (type_specifier)


estado 40

  191 struct_or_union: struct .

    $padrão  reduzir usando a regra 191 (struct_or_union)


estado 41

  192 struct_or_union: union .

    $padrão  reduzir usando a regra 192 (struct_or_union)


estado 42

  205 enum_specifier: enum . lkey enumerator_list rkey
  206               | enum . identifier lkey enumerator_list rkey
  207               | enum . identifier

    IDENTIFIER  deslocar, e ir ao estado 1
    '{'         deslocar, e ir ao estado 61

    identifier  ir ao estado 62
    lkey        ir ao estado 63


estado 43

  212 type_qualifier: const .

    $padrão  reduzir usando a regra 212 (type_qualifier)


estado 44

  213 type_qualifier: volatile .

    $padrão  reduzir usando a regra 213 (type_qualifier)


estado 45

  223 pointer: mul_sign .
  224        | mul_sign . type_qualifier_list
  225        | mul_sign . pointer
  226        | mul_sign . type_qualifier_list pointer

    CONST     deslocar, e ir ao estado 15
    VOLATILE  deslocar, e ir ao estado 16
    '*'       deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 223 (pointer)

    const                ir ao estado 43
    volatile             ir ao estado 44
    mul_sign             ir ao estado 45
    type_qualifier       ir ao estado 64
    pointer              ir ao estado 65
    type_qualifier_list  ir ao estado 66


estado 46

    0 $accept: translation_unit . $end
   84 translation_unit: translation_unit . external_declaration

    $end         deslocar, e ir ao estado 67
    IDENTIFIER   deslocar, e ir ao estado 1
    TYPEDEF      deslocar, e ir ao estado 2
    EXTERN       deslocar, e ir ao estado 3
    STATIC       deslocar, e ir ao estado 4
    AUTO         deslocar, e ir ao estado 5
    REGISTER     deslocar, e ir ao estado 6
    CHAR         deslocar, e ir ao estado 7
    SHORT        deslocar, e ir ao estado 8
    INT          deslocar, e ir ao estado 9
    LONG         deslocar, e ir ao estado 10
    SIGNED       deslocar, e ir ao estado 11
    UNSIGNED     deslocar, e ir ao estado 12
    FLOAT        deslocar, e ir ao estado 13
    DOUBLE       deslocar, e ir ao estado 14
    CONST        deslocar, e ir ao estado 15
    VOLATILE     deslocar, e ir ao estado 16
    VOID         deslocar, e ir ao estado 17
    STRUCT       deslocar, e ir ao estado 18
    UNION        deslocar, e ir ao estado 19
    ENUM         deslocar, e ir ao estado 20
    STRUCT_TYPE  deslocar, e ir ao estado 21
    '('          deslocar, e ir ao estado 22
    '*'          deslocar, e ir ao estado 23

    identifier                 ir ao estado 24
    extern                     ir ao estado 25
    typedef                    ir ao estado 26
    register                   ir ao estado 27
    auto                       ir ao estado 28
    static                     ir ao estado 29
    struct_type                ir ao estado 30
    unsigned                   ir ao estado 31
    char                       ir ao estado 32
    float                      ir ao estado 33
    short                      ir ao estado 34
    void                       ir ao estado 35
    int                        ir ao estado 36
    signed                     ir ao estado 37
    long                       ir ao estado 38
    double                     ir ao estado 39
    struct                     ir ao estado 40
    union                      ir ao estado 41
    enum                       ir ao estado 42
    const                      ir ao estado 43
    volatile                   ir ao estado 44
    mul_sign                   ir ao estado 45
    declaration                ir ao estado 47
    declaration_specifiers     ir ao estado 48
    storage_class_specifier    ir ao estado 49
    type_specifier             ir ao estado 50
    struct_or_union_specifier  ir ao estado 51
    struct_or_union            ir ao estado 52
    enum_specifier             ir ao estado 53
    type_qualifier             ir ao estado 54
    declarator                 ir ao estado 55
    direct_declarator          ir ao estado 56
    pointer                    ir ao estado 57
    external_declaration       ir ao estado 68
    function_definition        ir ao estado 59


estado 47

  289 external_declaration: declaration .

    $padrão  reduzir usando a regra 289 (external_declaration)


estado 48

  159 declaration: declaration_specifiers . semicolon
  160            | declaration_specifiers . init_declarator_list semicolon
  290 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  291                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  deslocar, e ir ao estado 1
    '('         deslocar, e ir ao estado 22
    '*'         deslocar, e ir ao estado 23
    ';'         deslocar, e ir ao estado 69
